[3951] Init checkin to fix issue related to jdk11 update